# CloudGammingFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
3pp/: CMakeLists.txt
3pp/glad/include/glad/: glad.h
3pp/glad/src/: glad.c
3pp/imgui/: CMakeLists.txt
Client/: CMakeLists.txt  Client.cpp  StreamReceiver.cpp  StreamReceiver.hh
Common/: CMakeLists.txt  GlfwWindow.cpp  GlfwWindow.hh  Logger.hh  Module.cpp  Module.hh  RenderStream.cpp  RenderStream.hh  Socket.cpp  Socket.h  StreamProtocol.cpp  StreamProtocol.hh  Timer.cpp  Vector2.hh
DirectXHook/: CMakeLists.txt  DXGI.cpp  DXGI.hh  DirectX.cpp  DirectX10.cpp  DirectX10.hh  DirectX11.cpp  DirectX11.hh  DirectX9.cpp  DirectX9.hh  DllMain.cpp  DllMain.h  Logger.cpp  Logger.hh  OpenGL.cpp  OpenGL.hh  framework.h
GameLoader/: CMakeLists.txt  GameLoader.cpp
Lib/: CMakeLists.txt
Lib/Interception/: CMakeLists.txt  interception.h
Lib/glad/: CMakeLists.txt
examples/: CMakeLists.txt  TestSun.cpp
examples/Client/: ClientConsole.cpp  ClientImgui.cpp
examples/Game/: Console.cpp  ImGuiOpenGL.cpp
src/: CMakeLists.txt  Win32.hh
src/Planet/: CMakeLists.txt  FpsLocker.cpp  FpsLocker.hh  Planet.cpp  Planet.hh  StreamController.cpp  StreamController.hh  StreamInformation.hh
src/Satellite/: CMakeLists.txt  Frames.cpp  Satellite.cpp  Satellite.hh  StreamController.cpp  StreamController.hh
src/Sun/: CMakeLists.txt  Define.hh  GameInstance.hh  GameParameter.hh  Sun.cpp  Sun.hh  main.cpp
src/api/: CloudGammingFramework.hh
src/cgf/: CMakeLists.txt  CloudGammingFramework.cpp  CloudGammingFramework.hh  CloudGammingFrameworkClient.cpp  CloudGammingFrameworkClient.hh  CloudGammingOpenGL.cpp  CloudGammingOpenGL.hh  cgf.hh
src/common/: AutoClose.hh  BufferStream.hh  CMakeLists.txt  Configuration.cpp  Configuration.hh  Frames.cpp  Frames.hh  InputEvent.hh  Logger.cpp  Logger.hh  Message.cpp  Message.hh  Module.cpp  Module.hh  NonCopyable.hh  Socket.cpp  Socket.hh  Timer.cpp  Timer.hh
src/glfw/: CMakeLists.txt  GlfwWindow.cpp  GlfwWindow.hh
src/ipc/: CMakeLists.txt  Event.cpp  Event.hh  FileMapping.cpp  FileMapping.hh  Handle.hh  Named.cpp  Named.hh  PollHandle.cpp  PollHandle.hh  PollHandleImpl.hh  WaitableTimer.cpp  WaitableTimer.hh  WsaSocket.cpp  WsaSocket.hh
test/: CMakeLists.txt  FileMapping.cpp  NamedPipe.cpp  NamedPipeClient.cpp  SocketClient.cpp  SocketServer.cpp  TestBufferStream.cpp  TestEvent.cpp  TestFPSLocker.cpp  TestSun.cpp  TestTimer.cpp
test/Client/: CMakeLists.txt  ClientConsole.cpp  ClientImgui.cpp
test/Game/: CMakeLists.txt  Console.cpp  ImGuiOpenGL.cpp
