cmake_minimum_required(VERSION 3.0)
project(CloudGamming VERSION 1.0)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
# set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
# set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd ")
# SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrtd.lib ")
include_directories(3pp)
include_directories(3pp/glfw/include)
include_directories(3pp/imgui)
include_directories(3pp/glad/include)
include_directories(3pp/doctest/doctest)
include_directories(src)

add_compile_definitions(LOG_STD)

add_subdirectory(3pp)
add_subdirectory(src)
add_subdirectory(test)
